test/spec_vectors/simd_store/fail/module_6.wat
(module (memory 1) (func (local v128) (block (br_if 0 (v128.store)))))